<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mad.pawan.inclass.pizzastore.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <TableLayout

        android:layout_width="354dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:id="@+id/tablelayout">

        <TableRow
            android:id="@+id/tablerow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
</TableLayout>
    <TableLayout
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:orientation="vertical">
        <TableRow
            android:id="@+id/tablerow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="6"></TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_pizza"
        android:src="@drawable/pizza"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="65dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        android:id="@+id/checkBox_delivery"
        android:checked="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_status"
        android:max="3"
        android:progress="1"
        android:indeterminate="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addtopping"
            android:id="@+id/button_addtoppings"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clearpizza"
            android:id="@+id/button_clearpizza"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:id="@+id/button_checkout" />

</LinearLayout>
